# fastapi-chat-completion

./: README.md  finetuning-gemma2-nimblebox.ipynb  model.py  pyproject.toml  request.sh  server.py  test.py
