[tool.poetry]
name = "gemma-oss2"
version = "0.1.0"
description = ""
authors = ["kanak8278 <kanak8278@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.42.4"
fastapi = "^0.111.1"
torch = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
